2005-09-30  Graydon Hoare  <graydon@redhat.com>

	PR 1131.
	* tapsets.cxx (dwflpp::find_variable_and_frame_base)
	(dwflpp::translate_components)
	(dwflpp::resolve_unqualified_inner_typedie)
	(dwflpp::translate_final_fetch_or_store): New functions.
	(dwflpp::literal_stmt_for_local): Factor a bit.
	(variable_flavour_calculating_visitor::visit_target_symbol): 
	Don't fault on lvalue, just collect an extra char.
	(var_expanding_copy_visitor::target_symbol_setter_functioncalls): 
	New member.
	(var_expanding_copy_visitor::visit_assignment): New method.
	(var_expanding_copy_visitor::visit_target_symbol): Permit lvalues.

2005-09-30  Frank Ch. Eigler  <fche@elastic.org>

	* tapset/system_calls.stp (*_str): Simplified boolean test logic
	throughout, fixed some typos.

2005-09-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 1182.
	* main.cxx (main): Support -D macro-setting option.
	* stap.1.in: Document it and related macros.
	* buildrun.cxx (compile_pass): Emit macro definitions.
	* translate.cxx (translate_pass): Guard limit macros with #ifdef.
	Eliminate MAXCONCURRENCY macro.
	* elaborate.h (systemtap_session): Add "macros" field.
	* parse.cxx (parse_if_statement): Clear "elseblock" if needed.

2005-09-27  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_cu_containing_global_address): Tolerate
	way out of range addresses that result in null cudie pointers.

2005-09-27  Frank Ch. Eigler  <fche@elastic.org>

	PR 1368.
	* translate.cxx (emit_common_header): Move some MAX* definitions out ...
	(translate_pass): ... to here.  Fix probe_start API impedance mismatch.
	(emit_module_init, exit): Tolerate registration errors, such as absence
	of kretprobes support.

2005-09-27  Frank Ch. Eigler  <fche@elastic.org>

	PR 1311.
	* tapsets.cxx (target_variable_flavour_calculating_visitor::
	visit_target_symbol): Print verbose error.
	(var_expanding_copy_visitor::visit_target_symbol): Throw
	simple error.
	
2005-09-26  Frank Ch. Eigler  <fche@elastic.org>
